Partially finished resume

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     <div class="projects">
       <h2>PROJECTS</h2>
       <ul>
-        <li>Github URL: 
+        <li><a href="https://github.com/smhsu/cse104">Github repository</a></li>
       </ul>
     </div>
     
