Finished resume, not debugged yet

--- a/index.html
+++ b/index.html
@@ -76,6 +76,24 @@
       <h2>PROJECTS</h2>
       <ul>
         <li><a href="https://github.com/smhsu/cse104">Github repository</a></li>
+        <li>Created a text searcher in <strong>Java</strong>, complete with GUI and advanced search features</li>
+        <li>Implemented a poker game in <strong>C++</strong></li>
+        <li>Built a two-player brickbreaker game in <strong>Java</strong></li>
+        <li>Designed and implemented a learning rock-paper-scissors AI in <strong>Python</strong></li>
+      </ul>
+    </div>
+    
+    <div class="activies">
+      <ul>
+        <li>5th place team at ACM Mid-Central Region Progamming Contest (fall 2013)</li>
+        <li>Member of ACM, Washington University chapter (2012 - )</li>
+        <li>
+          Pianist with 15 years of experience
+          <ul>
+            <li>1st place in St. Louis Young Artist Piano Competition (2012)</li>
+            <li>Performer at the Ethical Society of St. Louis and in Sheldon Concert Hall</li>
+          </ul>
+        </li>
       </ul>
     </div>
     
