--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
     </div>
     
     <div class="activies">
+      <h2>ACTIVITIES</h2>
       <ul>
         <li>5th place team at ACM Mid-Central Region Progamming Contest (fall 2013)</li>
         <li>Member of ACM, Washington University chapter (2012 - )</li>
