--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
         Washington University in St. Louis<br>
         B.S. w/ Major in Computer Science, Major in Music<br>
         Cumulative GPA 3.93/4.00<br>
-        Honors: Dean's List (x4, one every semester<br>
-        <span class="location">St. Louis, MO</span>
-        <span class="date">August 2012 - May 2016</span>
+        Honors: Dean's List (x4, one every semester)<br>
+        <span class="location">St. Louis, MO<br></span>
+        <span class="date">August 2012 - May 2016<br></span>
       </p>
     </div>
     
