--- a/index.html
+++ b/index.html
@@ -12,12 +12,15 @@
   </head>
 
   <body>
-    <h1>Silas Hsu</h1>
-    <p>1755 Warmington Ct.  Ballwin, MO 63021<br>hsu.silas@wustl.edu</p>
+    <div class="header">
+      <h1>Silas Hsu</h1>
+      <p>1755 Warmington Ct.  Ballwin, MO 63021<br>hsu.silas@wustl.edu</p>
+    </div>
+    
     <div class="summary">
       <h2>SUMMARY</h2>
       <p>
-        Second-year computer science undergraduate seeking internship and industry experience.
+        Third-year computer science undergraduate seeking internship and industry experience.
         Some prior research experience. Available full-time summer 2014: mid-May to late August.
       </p>
     </div>
@@ -76,6 +79,7 @@
       <h2>PROJECTS</h2>
       <ul>
         <li><a href="https://github.com/smhsu/cse104">Github repository</a></li>
+        <li>Led a team in producing a <strong>Java</strong>-based card game that allows multiple players over the Internet</li>
         <li>Created a text searcher in <strong>Java</strong>, complete with GUI and advanced search features</li>
         <li>Implemented a poker game in <strong>C++</strong></li>
         <li>Built a two-player brickbreaker game in <strong>Java</strong></li>
