--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <p class="font" style="margin-bottom: 30px">Silas<br /><small>(who can't draw birthday cards, so he got the computer to do it for him.)</small></p>
 	
     <span class="fix-width" id="timer">Current time: 0.00s</span>
-	<span class="fix-width" id="record">Your record: 0.00s</span>
+	<span class="fix-width" id="record">Your record: none yet</span>
 	<button id="reset">Rekindle!</button>
 
 	<script src="timer.js"></script>
