--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 ﻿<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <title>Jenny's Birthday Site!</title>
+    <title>Raymundo's Birthday Site!</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
-    <h1 class="font center">JENNY'S BIRTHDAY WEBSITE!</h1>
+    <h1 class="font center">RAYMUNDO'S BIRTHDAY WEBSITE!</h1>
 	<p class="font center" id="recordnote" style="margin-top: 0; margin-bottom: 30px;"></p>
     <div id="main">
         <img alt="cake" draggable="false" src="cake.jpg" id="cake"/><img alt="flame" draggable="false" src="flame.png" id="flame2"/>
@@ -16,7 +16,7 @@
         <img alt="flame" draggable="false" src="flame.png" id="flame6"/>
         <img alt="flame" draggable="false" src="flame.png" id="flame7"/>
     </div>
-    <p class="font center" style="margin-bottom: 30px;"><b>Happy birthday, Jenny!</b>  Click the flames to blow them out and make a wish!</p>
+    <p class="font center" style="margin-bottom: 30px;"><b>Happy birthday, Raymundo!</b>  Click the flames to blow them out and make a wish!</p>
     <p class="font">Your friend,</p>
     <p class="font" style="margin-bottom: 30px">Silas<br /><small>(who can't draw birthday cards, so he got the computer to do it for him.)</small></p>
 	
